--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
-    
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3a2330ed995744b192e45aebeb15c8be"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </head>
 <body class="bg-gray-100">
 
